--- a/examples/amp-visibility-observer.amp.html
+++ b/examples/amp-visibility-observer.amp.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>AMP #0</title>
+  <title>amp-visibility-observer</title>
   <link rel="canonical" href="amps.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
@@ -96,7 +96,7 @@
     </script>
   </amp-animation>
   <main>
-    <h1>amp-visibility-observer</h1>
+    <h1>amp-visibility-observer (Experimental)</h1>
     <div class="spacer"></div>
 
     <h2>Scrollbound animations with amp-visibility-observer and amp-animation</h2>
