--- a/examples/article.amp.html
+++ b/examples/article.amp.html
@@ -9,10 +9,9 @@
 
   <style amp-custom>
     body {
+      margin: 0;
       font-family: 'Georgia', Serif;
       background: white;
-      max-width: 720px;
-      margin: auto !important;
     }
 
     .brand-logo {
@@ -453,7 +452,8 @@
               artist="Blender Foundation"
               width="720"
               height="405"
-              layout="responsive">
+              layout="responsive"
+              controls>
             </amp-video>
             <figcaption class='video'>
               Fusce pretium tempor justo, vitae consequat dolor maximus eget.
