--- a/examples/amp-position-observer.amp.html
+++ b/examples/amp-position-observer.amp.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>amp-visibility-observer</title>
+  <title>amp-position-observer</title>
   <link rel="canonical" href="amps.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
-  <script async custom-element="amp-visibility-observer" src="https://cdn.ampproject.org/v0/amp-visibility-observer-0.1.js"></script>
+  <script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
   <style amp-custom>
     main {
@@ -49,6 +49,10 @@
       background-image: -webkit-linear-gradient(#EEE 50%, white 50%);
       background-image: linear-gradient(#EEE 50%, white 50%);
       background-size: 100% 3em;
+    }
+
+    pre {
+      display: inline;
     }
   </style>
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -94,19 +98,22 @@
     </script>
   </amp-animation>
   <main>
-    <h1>amp-visibility-observer (Experimental)</h1>
+    <h1>amp-position-observer (Experimental)</h1>
+    <div>Please ensure <pre>amp-position-observer</pre> is enabled by calling
+      <pre>AMP.toggleExperiment('amp-position-observer', true);</pre> in Developer Console first.
+    </div>
     <div class="spacer"></div>
 
-    <h2>Scrollbound animations with amp-visibility-observer and amp-animation</h2>
+    <h2>Scrollbound animations with amp-position-observer and amp-animation</h2>
     <h3>The following animation does one round (12pm-6pm) via scrolling when fully visible between the middle 80% of the viewport</h3>
 
     <div id="clock-scene-1" class="clock-scene">
-      <amp-visibility-observer
+      <amp-position-observer
         intersection-ratios="1"
         exclusion-margins="10vh"
         on="scroll:clockAnim1.seekTo(percent=event.percent)"
         layout="nodisplay">
-      </amp-visibility-observer>
+      </amp-position-observer>
 
       <amp-img layout="responsive" width=2 height=1.5 src="./img/clock.jpg">
         <div class="clock-hand"></div>
@@ -115,15 +122,15 @@
 
     <div class="spacer"></div>
 
-    <h2>Custom visibility start-end with amp-visibility-observer and amp-animation</h2>
+    <h2>Custom visibility start-end with amp-position-observer and amp-animation</h2>
     <h3>The following animation will start when the scene is 50% visible and pauses when 50% invisible</h3>
 
     <div id="clock-scene-2" class="clock-scene">
-      <amp-visibility-observer
+      <amp-position-observer
         intersection-ratios="0.5"
         on="enter:clockAnim2.start;exit:clockAnim2.pause"
         layout="nodisplay">
-      </amp-visibility-observer>
+      </amp-position-observer>
 
       <amp-img layout="responsive" width=2 height=1.5 src="./img/clock.jpg">
         <div class="clock-hand"></div>
