--- a/test/manual/amp-animation/embeds/scrollbound/clock.a4a.html
+++ b/test/manual/amp-animation/embeds/scrollbound/clock.a4a.html
@@ -8,7 +8,7 @@
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
-  <script async custom-element="amp-visibility-observer" src="https://cdn.ampproject.org/v0/amp-visibility-observer-0.1.js"></script>
+  <script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
 
   <script>
     // WARNING: This script tag makes this page an INVALID AMP Page.
@@ -85,11 +85,11 @@
   </amp-animation>
 
   <div class="container">
-    <amp-visibility-observer
+    <amp-position-observer
       intersection-ratios="1"
       exclusion-margins="5vh"
       on="scroll:clockAnim.seekTo(percent=event.percent)"
-      layout="nodisplay"></amp-visibility-observer>
+      layout="nodisplay"></amp-position-observer>
     <amp-img id="clock-bg" layout="fill" src="../../assets/clock.jpg">
     </amp-img>
     <div id="clockHand" class="clock-hand"></div>
