--- a/test/manual/amp-animation/scrollbound-embeds.amp.html
+++ b/test/manual/amp-animation/scrollbound-embeds.amp.html
@@ -10,11 +10,12 @@
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-network-fake-impl-0.1.js"></script>
   <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
+  <script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
   <script>
     // WARNING: This script tag makes this page an INVALID AMP Page.
     // This code is here for demo purposes and enables the required experiments
     // automatically for this demo so that visitors do not need to enable them manually.
-    var experiments = ['amp-animation'];
+    var experiments = ['amp-animation', 'amp-position-observer'];
     var interval = setInterval(function () {
       if (window.AMP && window.AMP.isExperimentOn) {
         if (!allExperimentsEnabled()) {
@@ -88,11 +89,11 @@
   </p>
 
   <h4>3P IFrame in-a-box</h4>
-  <div class="ad-container">
+  <!--<div class="ad-container">
     <amp-ad layout="responsive" width="350" height="250" type="fake" data-use-a4a="true" force3p="true" fakesig="true" disable3pfallback="false"
       src="//ads.localhost:8000/test/manual/amp-animation/embeds/scrollbound/clock.a4a.html?inabox=1">
       <amp-ad>
-  </div>
+  </div>-->
   <p>
     Sed pharetra semper fringilla. Nulla fringilla, neque eget varius suscipit, mi turpis congue odio, quis dignissim nisi nulla
     at erat. Duis non nibh vel erat vehicula hendrerit eget vel velit. Donec congue augue magna, nec eleifend dui porttitor
