--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -8,7 +8,7 @@
     <title>My Story</title>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,initial-scale=1">
-    <link rel="canonical" href="helloworld.html">
+    <link rel="canonical" href="blink-link.html">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
       body {
@@ -45,8 +45,7 @@
           <h1>First Page</h1>
           <p>This is the first page of this story.</p>          
         </amp-story-grid-layer>
-
-        <amp-story-grid-layer template="horizontal" style="padding-top: 240px">
+        <amp-story-grid-layer template="horizontal" style="padding-top: 260px">
           <amp-img
             src="./img/merch1.jpg"
             width="300"
@@ -54,39 +53,10 @@
             max-width="300"
             layout="fixed">
           </amp-img>
-          <amp-story-bling-link
-            id="blink-1"
-            width="75"
-            height="75"
-            layout="fixed">
-          </amp-story-bling-link>
-        </amp-story-grid-layer>
-
-      </amp-story-page>
-
-      <amp-story-page id="page-2">
-        <amp-story-grid-layer template="thirds">
-          <div grid-area="upper-third">
-            <h1>Second Page</h1>
-            <p>This is the second page of this story.</p>
-          </div>
-          <div grid-area="middle-third">
-              <amp-img
-              src="./img/merch1.jpg"
-              width="300"
-              height="400"
-              max-width="300"
-              layout="fixed">
-            </amp-img>
-            <amp-story-bling-link
-              id="blink-1"
-              width="75"
-              height="75"
-              layout="fixed">
-            </amp-story-bling-link>
-          </div>
+          <amp-story-bling-link id="blink-1"></amp-story-bling-link>
         </amp-story-grid-layer>
       </amp-story-page>
+
     </amp-story>
   </body>
 </html>
