--- a/examples/article-with-lightbox-2.0-gallery.amp.html
+++ b/examples/article-with-lightbox-2.0-gallery.amp.html
@@ -347,6 +347,7 @@
           "open": "https://foo.com/open",
           "thumb": "https://foo.com/thumb",
           "slide": "https://foo.com/slide",
+          "gallerySlide": "https://foo.com/gallerySlide",
           "controlToggle": "https://foo.com/controlToggle",
           "descExpand": "https://foo.com/descExpand"
         },
@@ -359,9 +360,21 @@
             "on": "thumbnailsViewToggled",
             "request": "thumb"
           },
-          "trackSlideChange": {
-            "on": "slideChange",
-            "request": "slide"
+          "trackAmpCarouselChange": {
+            "selector": "main",
+            "on": "amp-carousel-change",
+            "request": "slide",
+            "extraUrlParams": {
+              "id": "${toSlide}"
+            }
+          },
+          "trackAmpCarouselChangeInLightbox": {
+            "selector": "amp-lightbox-gallery",
+            "on": "amp-carousel-change",
+            "request": "gallerySlide",
+            "extraUrlParams": {
+              "id": "${toSlide}"
+            }
           },
           "trackControlsToggled": {
             "on": "controlsToggled",
@@ -443,13 +456,13 @@
           </p>
           <h3>Other Modern Architectures</h3>
           <amp-carousel lightbox width=1600 height=900 layout=responsive type=slides>
-            <amp-img src="https://picsum.photos/1600/900?image=898" layout="responsive" width="1600" height="900" aria-describedby="desc1">
+            <amp-img data-slide-id="first" src="https://picsum.photos/1600/900?image=898" layout="responsive" width="1600" height="900" aria-describedby="desc1">
               <div id="desc1" class="lightbox-only-description">
                 <p>Short - Sed pharetra semper fringilla. Nulla fringilla, neque eget</p>
               </div>
             </amp-img>
 
-            <amp-img src="https://picsum.photos/1600/900?image=864" layout="responsive" width="1600" height="900" aria-describedby="desc2">
+            <amp-img data-slide-id="second" src="https://picsum.photos/1600/900?image=864" layout="responsive" width="1600" height="900" aria-describedby="desc2">
               <div id="desc2" class="lightbox-only-description">
                 <p> Medium - Sed pharetra semper fringilla. Nulla fringilla, neque eget varius suscipit, mi turpis congue odio,
                   quis dignissim nisi nulla at erat. Duis non nibh vel erat vehicula hendrerit eget vel velit. Donec congue
@@ -458,7 +471,7 @@
               </div>
             </amp-img>
 
-            <amp-img src="https://picsum.photos/1600/900?image=870" layout="responsive" width="1600" height="900" aria-describedby="desc3">
+            <amp-img data-slide-id="third" src="https://picsum.photos/1600/900?image=870" layout="responsive" width="1600" height="900" aria-describedby="desc3">
               <div id="desc3" class="lightbox-only-description">
                 <p> Long - Sed pharetra semper fringilla. Nulla fringilla, neque eget varius suscipit, mi turpis congue odio,
                   quis dignissim nisi nulla at erat. Duis non nibh vel erat vehicula hendrerit eget vel velit. Donec congue
@@ -471,14 +484,14 @@
               </div>
             </amp-img>
 
-            <amp-img src="https://picsum.photos/1600/400?image=857" layout="responsive" width="1600" height="400"
+            <amp-img data-slide-id="fourth" src="https://picsum.photos/1600/400?image=857" layout="responsive" width="1600" height="400"
               alt="Wide image">
             </amp-img>
 
-            <amp-img src="https://picsum.photos/400/1600?image=682" layout="responsive" width="400" height="1600" alt="Tall image">
+            <amp-img data-slide-id="fifth" src="https://picsum.photos/400/1600?image=682" layout="responsive" width="400" height="1600" alt="Tall image">
             </amp-img>
 
-            <amp-img id="cover" src="https://picsum.photos/900/1600?image=629" layout="responsive" width="900" height="1600" alt="Tall image with fit:cover">
+            <amp-img data-slide-id="sixth" id="cover" src="https://picsum.photos/900/1600?image=629" layout="responsive" width="900" height="1600" alt="Tall image with fit:cover">
             </amp-img>
           </amp-carousel>
 
