--- a/extensions/amp-story/1.0/test/validator-amp-story-live-story.html
+++ b/extensions/amp-story/1.0/test/validator-amp-story-live-story.html
@@ -43,7 +43,7 @@
         poster-portrait-src="/examples/visual-tests/picsum.photos/image981_900x1600.jpg"
         poster-landscape-src="/examples/visual-tests/picsum.photos/image981_1600x900.jpg"
         poster-square-src="/examples/visual-tests/picsum.photos/image981_1600x1600.jpg"
-        id="story1" live-story disabled data-poll-interval="1500">
+        id="story1" live-story live-story-disabled data-poll-interval="1500">
 
       <amp-story-page id="cover" data-sort-time="1552330790">
         <amp-story-grid-layer template="vertical">
