--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -53,15 +53,16 @@
             max-width="210"
             layout="fixed">
           </amp-img>
-          <div class="i-amphtml-story-bling-link-wrapper">
-              <amp-story-bling-link
-                id="blink-1"
-                layout="fixed"
-                width="75px"
-                height="75px">
-              </amp-story-bling-link>
-              <div class="i-amphtml-story-bling-link-pulse"></div>
-          </div>
+          <amp-story-bling-link
+            id="blink-1"
+            layout="fixed"
+            width="75px"
+            height="75px">
+            <div class=i-amphtml-story-bling-link-button>
+              <i class="i-amphtml-story-bling-link-icon i-amphtml-story-shopping-cart"></i>
+            </div>              
+            <div class="i-amphtml-story-bling-link-pulse"></div>
+          </amp-story-bling-link>
         </amp-story-grid-layer>
       </amp-story-page>
 
