--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -67,6 +67,22 @@
               <h1>Second Page</h1>
               <p>This is the second page of this story.</p>          
             </amp-story-grid-layer>
+            <amp-story-grid-layer template="horizontal" style="padding-top: 260px">
+              <amp-img
+                src="./img/merch1.jpg"
+                width="210"
+                height="280"
+                max-width="210"
+                layout="fixed">
+              </amp-img>
+              <a id="blink-2" href="https://amp.dev" role="link" class="amp-story-bling-link">
+                <div class="i-amphtml-story-bling-link-pulse"></div>
+                <div class="i-amphtml-story-bling-link-circle">
+                  <i class="i-amphtml-story-bling-link-icon i-amphtml-story-bling-link-shopping-cart">
+                  </i>
+                </div>
+              </a>
+            </amp-story-grid-layer>
         </amp-story-page>
 
     </amp-story>
