--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -44,22 +44,7 @@
         <amp-story-grid-layer template="vertical">            
           <h1>First Page</h1>
           <p>This is the first page of this story.</p>          
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="horizontal" style="padding-top: 260px">
-          <amp-img
-            src="./img/merch1.jpg"
-            width="210"
-            height="280"
-            max-width="210"
-            layout="fixed">
-          </amp-img>
-          <amp-story-bling-link
-            id="blink-1"
-            layout="fixed"
-            width="90px"
-            height="90px">
-          </amp-story-bling-link>
-        </amp-story-grid-layer>
+        </amp-story-grid-layer>        
       </amp-story-page>
 
       <amp-story-page id="page-2">
@@ -75,13 +60,7 @@
                 max-width="210"
                 layout="fixed">
               </amp-img>
-              <a id="blink-2" href="https://amp.dev" role="link" class="amp-story-bling-link">
-                <div class="i-amphtml-story-bling-link-pulse"></div>
-                <div class="i-amphtml-story-bling-link-circle">
-                  <i class="i-amphtml-story-bling-link-icon i-amphtml-story-bling-link-shopping-cart">
-                  </i>
-                </div>
-              </a>
+              <a id="blink-2" href="https://amp.dev" role="link" class="i-amphtml-story-bling-link"></a>
             </amp-story-grid-layer>
         </amp-story-page>
 
