--- a/examples/amp-subscriptions.amp.html
+++ b/examples/amp-subscriptions.amp.html
@@ -260,12 +260,12 @@
 
         ↓[encrypted content below]↓
         <h2>
-          <section subscriptions-section="content">
+          <whateverTag subscriptions-section="content">
             <!-- inside must be text. otherwise it will fail validation -->
-            <script type="application/octet-stream" encrypted>
+            <script type="application/octet-stream" encrypted="aes-gcm" encryption-nonce="random#">
               PTzfydqid9+FitGB3xeQEG98u+zj6/wpZ/KMeZewGldw/pp2MCvwstHGCtqjIN5ROi61OmZkQDW9c2ezuu1WTXDANoE5UY5ED51lftywdTYmLk+rvtRL/fUVaPIOaiP/wkm+I2Ssw99cOnv4hFphOuz9Db2/RisQXVT/7yiaiHDEE5aJlxuAYqyjMnDweGhKjuXpgAOpbOOEI78t91AKpTbsQg9bxXafruB46+3jI6COfzI3e7griJ5LoQSPG4JEn7bw8jnD67djb9J3c6hak++vbSvqBxewNpSV+v9HU+w=
             </script>
-          </section>
+          </whateverTag>
         </h2>
         ↑[encrypted content above]↑
 
