--- a/extensions/amp-script/0.1/test/validator-amp-script.html
+++ b/extensions/amp-script/0.1/test/validator-amp-script.html
@@ -29,14 +29,34 @@
   <meta name="amp-experiment-token" content="{copy your token here}">
 </head>
 <body>
-  <!-- Valid. -->
-  <amp-script layout=container src="https://example.com/foo.js"><div class="root"><p>Some text to hydrate.</p></div></amp-script>
+  <!-- Valid: With 'script' attribute. -->
+  <amp-script layout=container script=hello></amp-script>
+  <script type=text/amp-script id=hello>
+    document.body.textContent = "Hello world!";
+  </script>
+
+  <!-- Valid: With 'src' attribute. -->
+  <amp-script layout=container src="https://example.com/foo.js">
+    <div class="root">
+      <p>Some text to hydrate.</p>
+    </div>
+  </amp-script>
+
+  <!-- Invalid: With neither 'script' or 'src' attributes. -->
+  <amp-script layout=container></amp-script>
+
+  <!-- Invalid: Local script with wrong type. -->
+  <script type=text/amp-js id=hello>
+    document.body.textContent = "Hello world!";
+  </script>
+
+  <!-- Invalid: Local script without 'id' attribute. -->
+  <script type=text/amp-script>
+    document.body.textContent = "Hello world!";
+  </script>
 
   <!-- Invalid: Relative URL. -->
   <amp-script layout=container src="/foo.js"></amp-script>
-
-  <!-- Invalid: Missing 'src' attribute. -->
-  <amp-script layout=container></amp-script>
 
   <!-- Invalid: Non-https 'src' attribute. -->
   <amp-script layout=container src="http://not.https.url"></amp-script>
