Visual diff test update.

--- a/examples/visual-tests/amp-story/amp-story-vertical-rendering.html
+++ b/examples/visual-tests/amp-story/amp-story-vertical-rendering.html
@@ -51,8 +51,8 @@
           <amp-img layout="fill" src="./img/cat1.jpg"></amp-img>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="vertical" class="bottom blue-bottom-gradient">
-          <p animate-in="fly-in-right" animate-in-duration="3s">
-            <span data-text-background-color="#00A3DB">Relentlessly pursues moth annoy owner until he gives you food say meow repeatedly until belly rubs, feels good drool that box?</span>
+          <p>
+            <span data-text-background-color="#00A3DB" animate-in="fly-in-right" animate-in-duration="3s">Relentlessly pursues moth annoy owner until he gives you food say meow repeatedly until belly rubs, feels good drool that box?</span>
           </p>
         </amp-story-grid-layer>
         <amp-story-page-attachment data-title="Lorem ipsum" layout="nodisplay">
@@ -69,8 +69,8 @@
           <amp-img layout="fill" src="./img/cat2.jpg"></amp-img>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="center">
-          <p animate-in="fly-in-right" animate-in-duration="3s">
-            <span data-text-background-color="crimson">i can fit in that box but inspect anything brought into the house wack the mini furry mouse intently stare at the same spot. Flee in terror at cucumber discovered on floor shake treat bag</span>
+          <p>
+            <span animate-in="fly-in-right" animate-in-duration="3s" data-text-background-color="crimson">i can fit in that box but inspect anything brought into the house wack the mini furry mouse intently stare at the same spot. Flee in terror at cucumber discovered on floor shake treat bag</span>
           </p>
         </amp-story-grid-layer>
       </amp-story-page>
