--- a/test/manual/loaders-new.amp.html
+++ b/test/manual/loaders-new.amp.html
@@ -114,6 +114,11 @@
       custom-element="amp-selector"
       src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
     ></script>
+    <script
+      async
+      custom-element="amp-twitter"
+      src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"
+    ></script>
     <style amp-custom>
       /* boring boiler place stuff */
       button {
@@ -366,10 +371,47 @@
         </section>
       </div>
       <div id="tab3" role="tab" aria-controls="tabpanel3" option>
-        amp-video
+        amp-twitter
       </div>
       <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3">
-        Tab three content...
+        <section>
+          <h2>normal amp-twitter</h2>
+          <amp-twitter
+            width="600"
+            height="579"
+            layout="responsive"
+            data-tweetID="585110598171631616"
+          ></amp-twitter>
+
+          <h2>amp-twitter with image placeholder</h2>
+          <amp-twitter
+            width="600"
+            height="579"
+            layout="responsive"
+            data-tweetID="585110598171631616"
+          >
+            <amp-img
+              placeholder
+              src="https://pbs.twimg.com/card_img/1144126403471953920/LFkZeFiW?format=jpg&name=600x314"
+              width="600"
+              height="579"
+              layout="responsive"
+            ></amp-img>
+          </amp-twitter>
+
+          <h2>amp-twitter with text placeholder</h2>
+          <amp-twitter
+            width="600"
+            height="579"
+            layout="responsive"
+            data-tweetID="585110598171631616"
+          >
+            <blockquote placeholder>
+              The story how I became what some people would call a frontend
+              engineer and an exploration into what that even means.
+            </blockquote>
+          </amp-twitter>
+        </section>
       </div>
     </amp-selector>
   </body>
